using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class MinionBehaviour : MonoBehaviour
{
   public static readonly int hashInPursuit = Animator.StringToHash("InPursuit");
   public static readonly int hashDetected = Animator.StringToHash("Detected");
   public static readonly int hashAttack = Animator.StringToHash("Attack");
   public static readonly int hashDie = Animator.StringToHash("Die");

    public void TargetDetection()
    {

    }

    public void TargetSelection()
    {

    }

}
